fase_2/aulas/5_Servidores_Web_e_Balanceamento_de_Carga/hands_on/servidores-web-balanceamento/4-controle-trafego-service-mesh-istio/hands-on-04-parte2-istio-routing/helloworld-v2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: helloworld-v2
  labels:
    app: helloworld
    version: v2                   # Aqui a versão é v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: helloworld
      version: v2
  template:
    metadata:
      labels:
        app: helloworld
        version: v2
    spec:
      containers:
      - name: helloworld
        image: nginxdemos/hello:plain-text
        ports:
        - containerPort: 80
