fase_2/aulas/5_Servidores_Web_e_Balanceamento_de_Carga/hands_on/servidores-web-balanceamento/4-controle-trafego-service-mesh-istio/hands-on-04-parte2-istio-routing/helloworld-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: helloworld-gateway
spec:
  selector:
    istio: ingressgateway         # Usa o IngressGateway padrão do Istio
  servers:
  - port:
      number: 80                  # Porta 80 (HTTP)
      name: http
      protocol: HTTP
    hosts:
    - "*"                         # Aceita tráfego de qualquer host (curinga)
