fase_2/aulas/5_Servidores_Web_e_Balanceamento_de_Carga/hands_on/servidores-web-balanceamento/4-controle-trafego-service-mesh-istio/hands-on-04-parte2-istio-routing/helloworld-destinationrule.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: helloworld-destinationrule
spec:
  host: helloworld                # Nome do Service Kubernetes
  subsets:                        # Definição dos subsets (subgrupos) que o Istio pode rotear
  - name: v1                      # Nome do subset
    labels:
      version: v1                 # Vai rotear para pods com label version=v1
  - name: v2
    labels:
      version: v2                 # Vai rotear para pods com label version=v2
