fase_2/aulas/5_Servidores_Web_e_Balanceamento_de_Carga/hands_on/servidores-web-balanceamento/4-controle-trafego-service-mesh-istio/hands-on-04-parte2-istio-routing/helloworld-virtualservice-100-v1.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: helloworld-virtualservice
spec:
  hosts:
  - "*"                           # Aplica-se a qualquer host
  gateways:
  - helloworld-gateway            # Associa ao Gateway que criamos
  http:
  - route:
    - destination:
        host: helloworld          # Nome do Service Kubernetes
        subset: v1                # Subset definido no DestinationRule
      weight: 100                 # 100% do tráfego vai para v1
